ghc-4335c07/testsuite/tests/typecheck/should_compile/tc171.hs

-- Data types with no constructors

module ShouldCompile where

data S
data T a

f :: [T a] -> Int
f xs = length xs


