ghc-4335c07/testsuite/tests/typecheck/should_fail/T10351.hs
module T10351 where

class C a where
  op :: a -> ()

f x = op [x]
